Add weather data and update README.md

--- a/notebooks/interpolation.ipynb
+++ b/notebooks/interpolation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "id": "9ffe1800",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "id": "7fa55c01",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "id": "2f6bd5e7",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "201266a8",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
     "    # Use inverse distance weighting interpolation to find the predicted concentration\n",
     "    try:\n",
     "        prediction = PredictPollutant(df_temp, coords, n_sensors=4,\n",
-    "                                      pollutant='pm25', year=2020, month=1, day=1, hour=8)\n",
+    "                                      pollutant=pollutant, year=2020, month=1, day=1, hour=8)\n",
     "        true_vals.append(true_val)\n",
     "        predicted_vals.append(prediction)\n",
     "    except Exception as e:\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "id": "7caf5918",
    "metadata": {},
    "outputs": [
@@ -116,9 +116,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error (MAE): 2.10\n",
-      "Root Mean Squared Error (RMSE): 2.93\n",
-      "R² Score: -0.47\n"
+      "Mean Absolute Error (MAE): 2.0967\n",
+      "Root Mean Squared Error (RMSE): 2.9332\n",
+      "R² Score: -0.4705\n"
      ]
     }
    ],
@@ -140,9 +140,9 @@
     "r2 = r2_score(true_vals, predicted_vals)\n",
     "\n",
     "# Print results\n",
-    "print(f'Mean Absolute Error (MAE): {mae:.2f}')\n",
-    "print(f'Root Mean Squared Error (RMSE): {rmse:.2f}')\n",
-    "print(f'R² Score: {r2:.2f}')"
+    "print(f'Mean Absolute Error (MAE): {mae:.4f}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse:.4f}')\n",
+    "print(f'R² Score: {r2:.4f}')"
    ]
   }
  ],
